--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,8 @@
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="./imagenes/Logo.png">
+     <!-- Bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Css -->
     <link rel="stylesheet" href="/Style.css">
     <!-- FontFamily -->
@@ -21,61 +23,95 @@
 </head>
 <body class="cuerpo">
     <header class="cabecera">
-        <div class="contenedorLogo">
-            <a href="Index.html">
-                <img src="./imagenes/Logo.png" alt="Logo de Go Gaucho" class="cabecera__imagen"> 
-            </a>
+      <div>
+        <div class="d-flex align-items-center flex-row align-content-center encabezado bg-principal">
+			    <div> <a href="index.html"><img src="./imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
+	  	  </div>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="./paginas/servicios.html">Servicios</a></li>
+              <li class="nav-item"><a class="nav-link" href="./paginas/usuarios.html">Usuarios</a></li>
+              <li class="nav-item"><a class="nav-link" href="./paginas/conviertete-en-gaucho.html">Conviértete en Gaucho</a></li>
+              <li><a class="nav-link" href="./paginas/contacto.html">Contacto</a></li>
+            </ul>
+          </div>
         </div>
-        <nav class="barraNavegacion">
-            <ul class="barraNavegacion__lista">
-                <li><a href="#" class="bAzul">Inicio </a></li>
-                <li><a href="./paginas/servicios.html"> Servicios </a></li>
-                <li><a href="./paginas/usuarios.html"> Usuarios </a></li>
-                <li><a href="./paginas/conviertete-en-gaucho.html"> Conviértete en Gaucho</a></li>
-                <li><a href="./paginas/contacto.html"> Contacto </a></li>
-             </ul>
-         </nav>
+      </nav>
     </header>
     <main class="principal">
-        <section class="seccion">
-            <div class="contenedorTextoUno">
-            <h2 class="tituloUno">¡Encontrá a tu Gaucho ideal!</h2>
-             <p class="parrafoL">Decargá la App. Registrate gratis, navegá entre los servicios disponibles y
-            contratá al profesional que mejor se ajuste a tus necesidades! </p>
-            </div>
-            <div class="contenedorCelular">
+        <section class="container">
+            <div class="row">
+              <div class="col-lg-7 col-md-6 col-sm-12">
+                 <h2 class="text-center text-light my-5">¡Encontrá a tu Gaucho ideal!</h2>
+                 <p class="text-lg-start text- md-start text-sm-center text-light fs-1 my-5 mx-5">Decargá la App. Registrate gratis, navegá entre los servicios disponibles y
+                  contratá al profesional que mejor se ajuste a tus necesidades! </p>
+              </div>
+              <div class="col-lg-5 col-md-6 col-sm-12">
                 <img src="./imagenes/celulartres.jpg" alt="Celular" class="imagenCelular">
+              </div>
             </div>
         </section> 
-        <section class="seccionDos">
-            <div class="contenedorTitulodos">
-                <h2 class="tituloDos">Nuestros Gauchos Destacados</h2>
-            </div>
-            <div class="contenedorPerfiles">
-                 <ul class="perfilesDestacados">
-                    <li><img src="./imagenes/cara1.jpeg" alt="Imagen de Usuario" class="caraUno"></li>
-                     <li><img src="./imagenes/cara2.jpeg" alt="Imagen de Usuario" class="caraDos"></li>
-                    <li><img src="./imagenes/cara3.jpeg" alt="Imagen de Usuario" class="caraTres"></li>
-                </ul>
+        <section class="container-fluid flex-column">
+          <div class="contenedorTitulodos">
+              <h2 class="text-center">Nuestros Gauchos Destacados</h2>
+          </div>
+          <div class="contenedorPerfiles">
+            <ul class="perfilesDestacados">
+              <li><img src="./imagenes/cara1.jpeg" alt="Imagen de Usuario" class="caraUno"></li>
+              <li><img src="./imagenes/cara2.jpeg" alt="Imagen de Usuario" class="caraDos"></li>
+              <li><img src="./imagenes/cara3.jpeg" alt="Imagen de Usuario" class="caraTres"></li>
+            </ul>
             </div>
         </section>
     </main>
-    <footer class="barraFooter">
-        <div class="redSocial">
+    <footer class="container-fluid barraFooter">
+      <div class="row">
+        <div class="col-lg-3 col-sm-12"> 
+          <div class="footer__contacto mt-5 d-flex flex-column align-items-start mx-5">
+            <div class="tel__footer">
+              <i class="fa-solid fa-phone fa-2x"></i>
+               <p class="fs-2 mx-4">432345</p>
+            </div>
+            <div class="dir__footer">
+              <i class="fa-solid fa-location-dot fa-2x"></i>
+              <p class="fs-3 mx-4"> 9 De Julio 1785, Sgo Del Est, Arg</p>
+            </div>
+    
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="contenedorMigas mt-5">
+            <a class="migas" aria-current="page" href="#">Inicio</a>
+            <a class="migas" href="./paginas/servicios.html">Servicios</a>
+            <a class="migas" href="./paginas/usuarios.html">Usuarios</a>
+            <a class="migas" href="./paginas/conviertete-en-gaucho.html">Conviértete en Gaucho</a>
+            <a class="migas" href="./paginas/contacto.html">Contacto</a> 
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-12 redsocial">
+          <div class="mt-5">
             <a href="https://www.facebook.com/mipagina" target="_blank">
-                <img src="./imagenes/facebook.png" alt="Logo Facebook" width=30px> 
+                <img src="../imagenes/facebook.png" alt="Logo Facebook"> 
             </a> 
             <a href="https://www.instagram.com/mipagina" target="_blank"> 
-                <img src="./imagenes/instagram.png" alt="Logo Instagram" width=30px>
+              <img src="../imagenes/instagram.png" alt="Logo Instagram">
             </a>
             <a href="https://www.youtube.com/micanal" target="_blank">
-                <img src="./imagenes/youtube.png" alt="Logo Youtube" width=30px>    
+                <img src="../imagenes/youtube.png" alt="Logo Youtube">    
             </a>
+          </div>
         </div>
         <div class="contenedor">
-            <p class="copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
-            
+          <p class="fs-2 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html> 
