--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -7,6 +7,8 @@
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="../imagenes/Logo.png">
+      <!-- Bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Css -->
     <link rel="stylesheet" href="../Style.css">
     <!-- FontFamily -->
@@ -18,20 +20,27 @@
 </head>
 <body class="cuerpo">
     <header class="cabecera">
-        <div class="contenedorLogo">
-            <a href="../Index.html">
-                <img src="../imagenes/Logo.png" alt="Logo de Go Gaucho" class="cabecera__imagen"> 
-            </a>
+        <div>
+            <div class="d-flex align-items-center flex-row align-content-center encabezado bg-principal">
+			    <div> <a href="index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
+	  	    </div>
         </div>
-        <nav class="barraNavegacion">
-            <ul class="barraNavegacion__lista">
-                <li><a href="../Index.html" class="bAzul">Inicio </a></li>
-                <li><a href="#"> Servicios </a></li>
-                <li><a href="usuarios.html"> Usuarios </a></li>
-                <li><a href="conviertete-en-gaucho.html"> Conviértete en Gaucho</a></li>
-                <li><a href="contacto.html"> Contacto </a></li>
-             </ul>
-         </nav>
+         <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                 </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                     <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="../Index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../paginas/usuarios.html">Usuarios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../paginas/conviertete-en-gaucho.html">Conviértete en Gaucho</a></li>
+                        <li><a class="nav-link" href="../paginas/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main class="principalServicios">
         <section class="serviciosSection">
@@ -71,21 +80,47 @@
             </div>
         </section>
     </main>
-    <footer class="barraFooter">
-        <div class="redSocial">
+   <footer class="container-fluid barraFooter">
+      <div class="row">
+        <div class="col-lg-3 col-sm-12"> 
+          <div class="footer__contacto mt-5 d-flex flex-column align-items-start mx-5">
+            <div class="tel__footer">
+              <i class="fa-solid fa-phone fa-2x"></i>
+               <p class="fs-2 mx-4">432345</p>
+            </div>
+            <div class="dir__footer">
+              <i class="fa-solid fa-location-dot fa-2x"></i>
+              <p class="fs-3 mx-4"> 9 De Julio 1785, Sgo Del Est, Arg</p>
+            </div>
+    
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="contenedorMigas mt-5">
+            <a class="migas" aria-current="page" href="../Index.html">Inicio</a>
+            <a class="migas" href="#">Servicios</a>
+            <a class="migas" href="../paginas/usuarios.html">Usuarios</a>
+            <a class="migas" href="../paginas/conviertete-en-gaucho.html">Conviértete en Gaucho</a>
+            <a class="migas" href="../paginas/contacto.html">Contacto</a> 
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-12 redsocial">
+          <div class="mt-5">
             <a href="https://www.facebook.com/mipagina" target="_blank">
-                <img src="../imagenes/facebook.png" alt="Logo Facebook" width=30px> 
+                <img src="../imagenes/facebook.png" alt="Logo Facebook"> 
             </a> 
             <a href="https://www.instagram.com/mipagina" target="_blank"> 
-                <img src="../imagenes/instagram.png" alt="Logo Instagram" width=30px>
+              <img src="../imagenes/instagram.png" alt="Logo Instagram">
             </a>
             <a href="https://www.youtube.com/micanal" target="_blank">
-                <img src="../imagenes/youtube.png" alt="Logo Youtube" width=30px>    
+                <img src="../imagenes/youtube.png" alt="Logo Youtube">    
             </a>
+          </div>
         </div>
         <div class="contenedor">
-            <p class="copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
+          <p class="fs-2 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
