--- a/paginas/conviertete-en-gaucho.html
+++ b/paginas/conviertete-en-gaucho.html
@@ -22,10 +22,10 @@
     <header class="cabecera">
         <div>
             <div class="d-flex align-items-center flex-row align-content-center encabezado bg-principal">
-			    <div> <a href="index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
+			    <div> <a href="../Index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
 	  	    </div>
         </div>
-         <nav class="navbar navbar-expand-lg navbar-light">
+         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -55,22 +55,22 @@
             <a href="#">¿Ya tengo cuenta?</a>
         </section>
     </main>
-    <footer class="container-fluid barraFooter">
+   <footer class="container-fluid barraFooter">
       <div class="row">
-        <div class="col-lg-3 col-sm-12"> 
+        <div class="col-lg-4 col-md-4 col-sm-4"> 
           <div class="footer__contacto mt-5 d-flex flex-column align-items-start mx-5">
-            <div class="tel__footer">
+            <div class="container tel__footer mb-2">
               <i class="fa-solid fa-phone fa-2x"></i>
-               <p class="fs-2 mx-4">432345</p>
+               <p class="text-light mx-3">+54 385432345</p>
             </div>
-            <div class="dir__footer">
+            <div class="container dir__footer">
               <i class="fa-solid fa-location-dot fa-2x"></i>
-              <p class="fs-3 mx-4"> 9 De Julio 1785, Sgo Del Est, Arg</p>
+              <p class="text-light mx-3"> 9 De Julio 1785 <br> Sgo Del Est, Arg</p>
             </div>
     
           </div>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="contenedorMigas mt-5">
             <a class="migas" aria-current="page" href="../Index.html">Inicio</a>
             <a class="migas" href="../paginas/servicios.html">Servicios</a>
@@ -79,10 +79,10 @@
             <a class="migas" href="../paginas/contacto.html">Contacto</a> 
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12 redsocial">
+        <div class="col-lg-4 col-md-4 col-sm-12 redsocial">
           <div class="mt-5">
             <a href="https://www.facebook.com/mipagina" target="_blank">
-                <img src="../imagenes/facebook.png" alt="Logo Facebook"> 
+                <img src="../imagenes/facebook.png" alt="Logo Facebook" class=""> 
             </a> 
             <a href="https://www.instagram.com/mipagina" target="_blank"> 
               <img src="../imagenes/instagram.png" alt="Logo Instagram">
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="contenedor">
-          <p class="fs-2 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
+          <p class="fs-6 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
