--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -22,10 +22,10 @@
     <header class="cabecera">
         <div>
             <div class="d-flex align-items-center flex-row align-content-center encabezado bg-principal">
-			    <div> <a href="index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
+			    <div> <a href="../Index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
 	  	    </div>
         </div>
-         <nav class="navbar navbar-expand-lg navbar-light">
+         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,57 +45,56 @@
     <main class="principalServicios">
         <section class="serviciosSection">
             <h1 class="serviciosTitulo1">SERVICIOS DISPONBILES</h1>
-            <div class="flexsearch">
-                <div class="flexsearch--wrapper">
-                    <form class="flexsearch--form" action="#" method="post">
-                    <div class="flexsearch--input-wrapper">
-                        <input class="flexsearch--input" type="search" placeholder="buscar servicio">
-                    </div>
-                    <input class="flexsearch--submit" type="submit" value="&#10140;"/>
-                    </form>
+            <div class="input-group text-center">
+                <div class="form-outline">
+                    <input type="search" id="form1" class="form-control" placeholder="BUSCAR" />
+                </div>
+                <button type="button" class="btn btn-primary">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
-
         </section>
-        <section class="contenedores">
-            <div class="serviciosContenedorIconos1">
-                <i class="fa-solid fa-trowel-bricks fa-8x"></i>
-                <i class="fa-solid fa-brush fa-8x"></i>
-                <i class="fa-solid fa-plug fa-8x"></i>
-            
-            </div>
-            <div class="serviciosContenedorTextoIcon1">
-                <h3 class="tituloIcon1" >Construcción</h3>
-                <h3 class="tituloIcon2">Pintor</h3>
-                <h3 class="tituloIcon3">Electricista</h3>
-            </div>
-            <div class="serviciosContenedor2">
-                <i class="fa-solid fa-key fa-8x"></i>
-                <i class="fa-solid fa-faucet-drip fa-8x"></i>
-                <i class="fa-solid fa-water-ladder fa-8x"></i>
-            </div>
-            <div class="serviciosContenedorTextoIcon2">
-                <h3 class="tituloIcon4">Cerrajero</h3>
-                <h3 class="tituloIcon5">Plomería</h3>
-                <h3 class="tituloIcon6">Piletero</h3>
+        <section class="container-fluid servicios">
+            <div class="row">
+                <div class="serviciosContenedorIconos1">
+                    <a href="#"><i class="fa-solid fa-trowel-bricks fa-8x"></i></a>
+                    <a href="#"><i class="fa-solid fa-brush fa-8x"></i></a>
+                    <a href="#"><i class="fa-solid fa-plug fa-8x"></i></a>  
+                </div>
+                <div class="serviciosContenedorTextoIcon1">
+                    <h3 class="tituloIcon1" >Construcción</h3>
+                    <h3 class="tituloIcon2">Pintor</h3>
+                    <h3 class="tituloIcon3">Electricista</h3>
+                </div>
+                <div class="serviciosContenedor2">
+                    <a href="#"><i class="fa-solid fa-key fa-8x"></i></a>
+                    <a href="#"><i class="fa-solid fa-faucet-drip fa-8x"></i></a>
+                    <a href="#"><i class="fa-solid fa-water-ladder fa-8x"></i></a>
+                </div>
+                <div class="serviciosContenedorTextoIcon2">
+                    <h3 class="tituloIcon4">Cerrajero</h3>
+                    <h3 class="tituloIcon5">Plomería</h3>
+                    <h3 class="tituloIcon6">Piletero</h3>
+                </div>
             </div>
         </section>
     </main>
    <footer class="container-fluid barraFooter">
       <div class="row">
-        <div class="col-lg-3 col-sm-12"> 
+        <div class="col-lg-4 col-md-4 col-sm-4"> 
           <div class="footer__contacto mt-5 d-flex flex-column align-items-start mx-5">
-            <div class="tel__footer">
+            <div class="container tel__footer mb-2">
               <i class="fa-solid fa-phone fa-2x"></i>
-               <p class="fs-2 mx-4">432345</p>
+               <p class="text-light mx-3">+54 385432345</p>
             </div>
-            <div class="dir__footer">
+            <div class="container dir__footer">
               <i class="fa-solid fa-location-dot fa-2x"></i>
-              <p class="fs-3 mx-4"> 9 De Julio 1785, Sgo Del Est, Arg</p>
+              <p class="text-light mx-3"> 9 De Julio 1785 <br> Sgo Del Est, Arg</p>
             </div>
     
           </div>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="contenedorMigas mt-5">
             <a class="migas" aria-current="page" href="../Index.html">Inicio</a>
             <a class="migas" href="#">Servicios</a>
@@ -104,10 +103,10 @@
             <a class="migas" href="../paginas/contacto.html">Contacto</a> 
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12 redsocial">
+        <div class="col-lg-4 col-md-4 col-sm-12 redsocial">
           <div class="mt-5">
             <a href="https://www.facebook.com/mipagina" target="_blank">
-                <img src="../imagenes/facebook.png" alt="Logo Facebook"> 
+                <img src="../imagenes/facebook.png" alt="Logo Facebook" class=""> 
             </a> 
             <a href="https://www.instagram.com/mipagina" target="_blank"> 
               <img src="../imagenes/instagram.png" alt="Logo Instagram">
@@ -118,7 +117,7 @@
           </div>
         </div>
         <div class="contenedor">
-          <p class="fs-2 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
+          <p class="fs-6 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
