--- a/paginas/conviertete-en-gaucho.html
+++ b/paginas/conviertete-en-gaucho.html
@@ -10,7 +10,7 @@
       <!-- Bootstrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Css -->
-    <link rel="stylesheet" href="../Style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- FontFamily -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,400&display=swap');
@@ -42,18 +42,76 @@
             </div>
         </nav>
     </header>
-    <main class="principalConvierte_Gaucho">
-        <section class="formRegistro">
-            <h4>Formulario De Registro</h4>
-            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
-            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
-            <input class="controls" type="date" name="edad" id="edad" placeholder="Ingrese se fecha de nacimiento">
-            <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
-            <input class="controls" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
-            <p>Estoy de acuerdo con Terminos y Condiciones</p>
-            <input class="boton1" type="submit" value="Registrar">
-            <a href="#">¿Ya tengo cuenta?</a>
-        </section>
+    <main class="principal convierte__gaucho">
+        <div class="container form-body">
+            <div class="container row">
+                <div class="container form-holder">
+                    <div class="container form-content">
+                        <div class="container form-items">
+                            <h3>Registrate</h3>
+                            <p>Completa la siguiente info:</p>
+                            <form class="requires-validation" novalidate>
+                                <div class="col-md-12">
+                                    <input class="form-control" type="text" name="name" placeholder="Nombre completo" required>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <input class="form-control" type="email" name="email" placeholder="E-mail" required>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <input class="form-control" type="password" name="password" placeholder="Contraseña" required>
+                                </div>
+
+                                <div class="col-md-12 mt-3 genero">
+                                    <label class="mb-3 mr-1" for="gender">Género: </label>
+                                    <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
+                                
+                                    <label class="btn btn-sm btn-outline-secondary" for="male">Masculino</label>
+                                    <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
+                                  
+                                    <label class="btn btn-sm btn-outline-secondary" for="female">Femenino</label>
+                                    <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
+
+                                    <label class="btn btn-sm btn-outline-secondary" for="secret">Secreto</label>
+
+                                </div>
+                            <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label">Confirmo que todos los datos son correctos</label>
+                            </div>
+                            <div class="form-button mt-3">
+                                <button id="submit" type="submit" class="btn btn-primary">Registrar</button>
+                            </div>
+                        </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <!-- <div class="container" id="registration-form">
+        <div class="image"></div>
+        <div class="frm">
+            <h1 class="text-center">Registrate</h1>
+            <form>
+                <div class="form-group mt-5">
+                    <label for="username">Usuario:</label>
+                    <input type="text" class="form-control" id="username" placeholder="Ingresa un Nombre de Usuario">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Ingresa un email">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Contraseña:</label>
+                    <input type="password" class="form-control" id="pwd" placeholder="Elige tu contraseña">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success btn-lg">Registrar</button>
+                </div>
+            </form>
+        </div>
+    </div> -->
     </main>
     <footer class="site-footer">
         <div class="container">
