--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -10,7 +10,7 @@
       <!-- Bootstrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Css -->
-    <link rel="stylesheet" href="../Style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- FontFamily -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,400&display=swap');
@@ -42,7 +42,7 @@
             </div>
         </nav>
     </header>
-    <main class="principalServicios">
+    <main class="principal">
         <section class="serviciosSection">
             <h1 class="serviciosTitulo1">SERVICIOS DISPONBILES</h1>
             <div class="input-group text-center">
