--- a/paginas/usuarios.html
+++ b/paginas/usuarios.html
@@ -10,7 +10,7 @@
       <!-- Bootstrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Css -->
-    <link rel="stylesheet" href="../Style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- FontFamily -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,400&display=swap');
@@ -52,7 +52,7 @@
             </div>
         </nav>
     </header>
-    <main class="principalUsuarios">
+    <main class="principal">
         <div class="container w-75 bg-primary mt-5 rounded shadow">
             <div class="row align-items-stretch">
                <div class="col bg d-none d-lg-block col-md-5 col-lg-5 col-xl-6 rounded">
