Entrega Desafio SASS II + SEO

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="servicios, oficios,lavado,construccion,pintura,piletero,hogar,">
     <meta name="description" content="Go Gaucho es una plataforma intermediaria para la contratación de servicios y oficios mayormente
     destinados al mantenimiento y reparación del hogar">
     <meta name="author" content="Ignacio Simonetti">
