--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="servicios, oficios, formulario de contacto, escribe comentarios, enviar consulta">
+    <meta name="description" content="Seccion para el envio de tomar contacto y realizar consultas, evacuar dudas y manifestar sugerencias. Go Gaucho es una plataforma intermediaria para la contratación de servicios y oficios mayormente
+    destinados al mantenimiento y reparación del hogar">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
