--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="servicios, oficios,lavado,construccion,pintura,piletero,hogar, buscar servicio, servicios disponibles">
+    <meta name="description" content="Sección para la busqueda de servicios disponibles.Go Gaucho es una plataforma intermediaria para la contratación de servicios y oficios mayormente
+    destinados al mantenimiento y reparación del hogar">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
