--- a/paginas/usuarios.html
+++ b/paginas/usuarios.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="servicios, oficios, formulario, ingreso de usuarios,registro usuarios nuevos, log in">
+    <meta name="description" content="Seccion para el registro de usuarios nuevos y logueo de usuario. sGo Gaucho es una plataforma intermediaria para la contratación de servicios y oficios mayormente
+    destinados al mantenimiento y reparación del hogar">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
