--- a/paginas/conviertete-en-gaucho.html
+++ b/paginas/conviertete-en-gaucho.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="servicios, oficios,formulario, registro de profesionales, conviertete en gaucho,">
+    <meta name="description" content="Seecion para el registro de profesionales que desean ofrecer servicios. Go Gaucho es una plataforma intermediaria para la contratación de servicios y oficios mayormente
+    destinados al mantenimiento y reparación del hogar">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/f5461657d7.js" crossorigin="anonymous"></script>
     <!-- favicon -->
@@ -48,7 +51,7 @@
                 <div class="container form-holder">
                     <div class="container form-content">
                         <div class="container form-items">
-                            <h3>Registrate</h3>
+                            <h3 class="text-center">Registrate</h3>
                             <p>Completa la siguiente info:</p>
                             <form class="requires-validation" novalidate>
                                 <div class="col-md-12">
@@ -89,29 +92,6 @@
                 </div>
             </div>
         </div>
-         <!-- <div class="container" id="registration-form">
-        <div class="image"></div>
-        <div class="frm">
-            <h1 class="text-center">Registrate</h1>
-            <form>
-                <div class="form-group mt-5">
-                    <label for="username">Usuario:</label>
-                    <input type="text" class="form-control" id="username" placeholder="Ingresa un Nombre de Usuario">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingresa un email">
-                </div>
-                <div class="form-group">
-                    <label for="pwd">Contraseña:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="Elige tu contraseña">
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-lg">Registrar</button>
-                </div>
-            </form>
-        </div>
-    </div> -->
     </main>
     <footer class="site-footer">
         <div class="container">
