--- a/paginas/conviertete-en-gaucho.html
+++ b/paginas/conviertete-en-gaucho.html
@@ -25,7 +25,9 @@
     <header class="cabecera">
         <div>
             <div class="d-flex align-items-center flex-row align-content-center encabezado bg-principal">
-			    <div> <a href="../Index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a></div>
+			    <div> 
+                    <a href="../Index.html"><img src="../imagenes/Logo.png" alt="IMAGEN LOGO" class="cabecera__imagen" id="INICIO"></a>
+                </div>
 	  	    </div>
         </div>
          <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light">
@@ -98,24 +100,16 @@
             <div class="row mb-5">
                 <div class="col-md-3 mb-5">
                     <h2>Sobre Nosotros</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet quia sit. 
-                    Voluptatem voluptate quisquam dolorem obcaecati eaque soluta possimus cumque dolor
-                    laudantium iure, at, ipsam, perspiciatis blanditiis magnam cupiditate!</p>
+                   <p class="text-justify"> Somos una nueva StartUp con sede en Argentina que que combina la mano de obra independiente con la demanda local, lo que permite a los consumidores encontrar ayuda inmediata con las tareas cotidianas, incluidas la limpieza, la mudanza, la entrega y el trabajo de mantenimiento, etc.</p>
                     <p><a href="">Accede para conocer más</a></p>
                 </div>
                 <div class="col-md-3 mb-5">
                     <h2>Contacto &amp; Dirección</h2>
                     <ul class="list-unstyled footer-link">
-                        <li class="d-flex">
-                            <span class="me-3">Dirección:</span> <span class="text-white"> 24 de Septiembre 262, Santiago Del Estero,
-                                Argentina</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="me-3">Teléfono:</span> <span class="text-white"> +54 385 4211784</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="me-3">Email:</span> <span class="text-white">info@gogaucho.com.ar</span>
-                        </li>
+                        <li class="d-flex"><span class="me-3">Dirección:</span> <span class="text-white"> 24 de Septiembre 262, Santiago Del Estero,
+                                Argentina</span></li>
+                        <li class="d-flex"><span class="me-3">Teléfono:</span> <span class="text-white"> +54 385 4211784</span></li>
+                        <li class="d-flex"><span class="me-3">Email:</span> <span class="text-white">info@gogaucho.com.ar</span></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-5">
@@ -130,17 +124,17 @@
                 <div class="col-md-3">
                     <h2>Nuestras redes sociales</h2>
                     <ul class="list-unstyled footer-link d-flex footer-social">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                        <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                        <li><a href="#"><span class="fa fa-youtube"></span></a></li>
+                        <li><a href="https://www.facebook.com" target="_blank"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://twitter.com" target="_blank"><span class="fa fa-twitter"></span></a></li>
+                        <li><a href="https://www.instagram.com" target="_blank"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.linkedin.com" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+                        <li><a href="https://www.youtube.com" target="_blank"><span class="fa fa-youtube"></span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 text-md-center text-left">
-                    <p>Este sitio está hecho con <i class="fa fa-heart-o"></i> por Aventura Digital 2022</p>
+                    <p>Este sitio está hecho con <i class="fa fa-mug-saucer"></i> por Aventura Digital 2022</p>
                 </div>
             </div>
 
