Tercera Entrega Proyecto Final (segundo intento)

--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,7 @@
             </section>
         </section>
     </main>
-    <section class="sectio-suscribe bg-light">
+    <section class="section-suscribe">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-12 mb-4">
