--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -62,9 +62,9 @@
         <section class="container-fluid servicios">
             <div class="row">
                 <div class="serviciosContenedorIconos1">
-                    <a href="#"><i class="fa-solid fa-trowel-bricks fa-8x"></i></a>
-                    <a href="#"><i class="fa-solid fa-brush fa-8x"></i></a>
-                    <a href="#"><i class="fa-solid fa-plug fa-8x"></i></a>  
+                    <a href="#"><i class="fa-solid fa-trowel-bricks fa-8x text-light"></i></a>
+                    <a href="#"><i class="fa-solid fa-brush fa-8x text-light"></i></a>
+                    <a href="#"><i class="fa-solid fa-plug fa-8x text-light"></i></a>  
                 </div>
                 <div class="serviciosContenedorTextoIcon1">
                     <h3 class="tituloIcon1" >Construcción</h3>
@@ -72,9 +72,9 @@
                     <h3 class="tituloIcon3">Electricista</h3>
                 </div>
                 <div class="serviciosContenedor2">
-                    <a href="#"><i class="fa-solid fa-key fa-8x"></i></a>
-                    <a href="#"><i class="fa-solid fa-faucet-drip fa-8x"></i></a>
-                    <a href="#"><i class="fa-solid fa-water-ladder fa-8x"></i></a>
+                    <a href="#"><i class="fa-solid fa-key fa-8x text-light"></i></a>
+                    <a href="#"><i class="fa-solid fa-faucet-drip fa-8x text-light"></i></a>
+                    <a href="#"><i class="fa-solid fa-water-ladder fa-8x text-light"></i></a>
                 </div>
                 <div class="serviciosContenedorTextoIcon2">
                     <h3 class="tituloIcon4">Cerrajero</h3>
