--- a/paginas/usuarios.html
+++ b/paginas/usuarios.html
@@ -29,6 +29,9 @@
              background-image: url(/imagenes/imagenusuario3.jpg);
              background-position: center center;
          }
+         .cabecera {
+             background: linear-gradient(to right, #00030c, #264189);
+         }
      </style>
 </head>
 <body class="cuerpo">
